# GenomAI

./: .env.example  .env.prod.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LESSONS.md  Makefile  README.md  TEST_RESULTS_2024-12-24.md  TEST_WORKFLOW.md  render.yaml
.agents/: .gitignore  STATUS.md
.bmad/: QUICK_START.md
.claude/: ralph-loop.local.md
.github/: CODEOWNERS  CREATE_ISSUES_COMMANDS.md  ISSUES_STEP07.md  ISSUE_TEMPLATE.md  ISSUE_TEMPLATE_TESTING.md  PULL_REQUEST_TEMPLATE.md  README_CREATE_ISSUES.md  create_step07_issues.js  create_step07_issues_gh.sh
100$/: How To Write Facebook Ad Copy Like An Expert.txt  are your cpm's high watch this..txt  how to create great leads for your ad copy.txt  how to write killer ad copy for your native image ads (hit your first 1k day).txt
_bmad/: INSTALL_INSTRUCTIONS.md
_bmad-output/: bmm-workflow-status.yaml
decision-engine-service/: .env.example  .gitignore  Dockerfile  README.md  main.py  package.json  pyproject.toml  render.yaml  requirements.txt
decision-engine-service/qa-notes/: issue-541-redos-protection.md
decision-engine-service/scripts/: terminate_workflow.py  test_historical_import.py  test_module_extraction.py  test_queue_historical.py
decision-engine-service/src/: __init__.py  index.js  types.py
decision-engine-service/src/checks/: __init__.py  deathMemory.js  death_memory.py  fatigueConstraint.js  fatigue_constraint.py  index.js  riskBudget.js  risk_budget.py  schemaValidity.js  schema_validity.py
decision-engine-service/src/core/: __init__.py  http_client.py  supabase.py
decision-engine-service/src/routes/: auth.py  buyers.py  dashboard.py  decision.js  decision.py  historical.py  idea_registry.py  knowledge.py  learning.py  onboarding.py  outcomes.py  premise.py  recommendations.py  schedules.py  schema.py  telegram.py  transcripts.py
decision-engine-service/src/services/: auto_recommend.py  avatar_service.py  charts.py  component_learning.py  confidence.py  correlation_discovery.py  cross_transfer.py  dashboard_service.py  decisionEngine.js  decision_engine.py  drift_detection.py  exploration.py  external_inspiration.py  feature_correlation.py  feature_registry.py  genome_heatmap.py  github_issue.py  idea_registry.py  learning_loop.py  meta_dashboard.py  module_selector.py  outcome_service.py  premise_learning.py  premise_selector.py  recommendation.py  schema_validator.py  staleness_detector.py  statistical_validation.py  supabase.js  supabase.py  what_if_simulator.py
decision-engine-service/src/services/features/: __init__.py  component_pair_winrate.py
decision-engine-service/src/utils/: environment.py  errors.js  errors.py  hashing.py  parsing.py  safe_regex.py  time_decay.py  validators.js  validators.py
decision-engine-service/temporal/: __init__.py  circuit_breaker.py  client.py  config.py  schedules.py  tracing.py  worker.py
decision-engine-service/temporal/activities/: __init__.py  agent_supervisor.py  buyer.py  decision_engine.py  feature_monitoring.py  hygiene_cleanup.py  hygiene_health.py  hypothesis_generation.py  keitaro.py  knowledge_db.py  knowledge_extraction.py  learning.py  llm_decomposition.py  maintenance.py  metrics.py  modular_generation.py  module_extraction.py  module_learning.py  module_snapshots.py  premise_extraction.py  premise_selection.py  recommendation.py  supabase.py  telegram.py  transcription.py
decision-engine-service/temporal/models/: __init__.py  buyer.py  creative.py  decision.py  hygiene.py  idea.py  knowledge.py  supabase_inputs.py  validators.py
decision-engine-service/temporal/workflows/: __init__.py  agent_supervisor.py  buyer_onboarding.py  creative_pipeline.py  health_check.py  historical_import.py  keitaro_polling.py  knowledge_application.py  knowledge_ingestion.py  learning_loop.py  maintenance.py  metrics_processing.py  modular_hypothesis.py  premise_extraction.py  recommendation.py
decision-engine-service/tests/integration/: test_module_extraction_integration.py
decision-engine-service/tests/unit/: test_activity_validators.py  test_advisory_mode.py  test_callback_data_validation.py  test_circuit_breaker.py  test_creative_failed_status.py  test_dashboard.py  test_exploration.py  test_geo_validation.py  test_hashing.py  test_learning_idempotency.py  test_modular_generation.py  test_module_extraction.py  test_module_selector.py  test_outcome_service.py  test_premise_extraction.py  test_schema_validator.py  test_staleness_detector.py  test_supabase_client.py  test_webhook_secret.py
docs/: API_REFERENCE.md  CLAUDE_CODE_WORKFLOW.md  DEPENDENCY_GRAPH.md  DEVELOPMENT_ORDER.md  E2E_REFERENCE.md  E2E_SERVER_CHECKLIST.md  FINAL_ARCHITECTURE.md  HOWTO_TRANSCRIPTS.md  INTERVAL_OPTIMIZATION_DISCUSSION.md  KEITARO_BUYER_METRICS.md  KNOWN_ISSUES.md  N8N_AUDIO_TRANSCRIBE_REFERENCE.md  N8N_TRANSLATE_TEXT_REFERENCE.md  N8N_WORKFLOWS.md  OUTPUT_SPECIFICATION.md  README.md  SCHEMA_REFERENCE.md  SPHERES.md  STACK_COMPARISON.md  SYSTEM_CAPABILITIES.md  TEMPORAL_RUNBOOK.md  TEMPORAL_WORKFLOWS.md  TESTING.md  TESTING_PLAN.md  TRANSCRIPT_WEBHOOK.md  VISION.md  WORK_COMPLETED.md  coal-purchase-calculator-plan.md  keitaro-api-docs.json  outcome_service_spec.md
infrastructure/: README.md  (+24 more)
(+553 files in other folders)
