[project]
name = "genomai-decision-engine"
version = "1.1.0"
description = "Autonomous Creative Decision System - Decision Engine Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-dotenv==1.0.0",
    "pydantic==2.8.2",
    "httpx>=0.27.0",
    "numpy>=2.4.1",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]
